cookbooks/cc_etc_profile/files/default/iptables
# Firewall configuration written by system-config-securitylevel
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
#ssh
-A RH-Firewall-1-INPUT -p 22 -j ACCEPT
#nagios
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 5666 -j ACCEPT
# backupexec
-A RH-Firewall-1-INPUT -p tcp -i eth0 --dport 10000:10100 --sport 1024:65535 -m state --state NEW -j ACCEPT
-A RH-Firewall-1-INPUT -p 50 -j ACCEPT
-A RH-Firewall-1-INPUT -p 51 -j ACCEPT
# rule to allow DMZ to port 80
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 80 -s 63.138.119.128/25 -j ACCEPT
# rule to allow DMZ to port 8080
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 8080 -s 63.138.119.128/25 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
